--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </div>
         </header>
         <main>
+            <button aria-label="to top of page button" id="to-top-btn">Top</button>
             <h1>Learn the secrets of Coffee</h1>
             <h2>Learn, make & drink</h2>
             <div id="index-cta-padding">
