--- a/specific-post.html
+++ b/specific-post.html
@@ -56,6 +56,7 @@
         </div>
     </header>
     <main>
+        <button aria-label="to top of page button" id="to-top-btn">Top</button>
         <div id="modal-container"></div>
         <div id="chosen-post-container">
             <div class="loader">
