--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
         </div>
     </header>
     <main>
+        <button aria-label="to top of page button" id="to-top-btn">Top</button>
         <div class="content-width">
             <h1>About the Blog</h1>
             <blockquote>
