--- a/posts.html
+++ b/posts.html
@@ -56,6 +56,7 @@
         </div>
     </header>
     <main>
+        <button aria-label="to top of page button" id="to-top-btn">Top</button>
         <div class="top-text-width">
             <h1>All my coffee posts</h1>
             <h2>Full of caffein</h2>
