--- a/about.html
+++ b/about.html
@@ -124,9 +124,9 @@
                     <button type="submit">Subscribe</button>
                 </form>
                 <div id="social-icons">
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-twitter"></i>
+                    <a href="https://www.facebook.com/" aria-label="facebook account"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" aria-label="Instagram account"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/twitter" aria-label="Twitter account"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
             <div class="footer-nav">
