--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
     <link href="css/index.css" rel="stylesheet">
     <!-- icons source -->
     <script src="https://kit.fontawesome.com/39e20b04f8.js"crossorigin="anonymous"></script>
-    <!-- Hotjar Tracking Code for https://thebean.netlify.app/ -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:2401616,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
     <title>The Bean | Home</title> 
 </head>
 <body>
@@ -43,7 +32,7 @@
                     </div>
                 </label>
                 <input type="checkbox" id="hamburger-menu" role="navigation">
-                <nav aria-label="Main navigation">
+                <nav>
                     <ul>
                         <li><a  href="index.html" class="active">Home</a></li>
                         <li><a  href="posts.html">Posts</a></li>
@@ -57,7 +46,10 @@
             </div>
         </header>
         <main>
-            <button aria-label="to top of page button" id="to-top-btn">Top</button>
+            <button aria-label="to top of page button" id="to-top-btn">
+                <i class="fas fa-angle-up"></i>
+                <p>Top</p>
+            </button>
             <h1>Learn the secrets of Coffee</h1>
             <h2>Learn, make & drink</h2>
             <div id="index-cta-padding">
@@ -85,7 +77,7 @@
                 </div>
                 <div class="center-align">
                     <a href="posts.html">
-                        <button class="cta" type="button">All posts</button>
+                        <button class="cta" type="button">All posts<i class="fas fa-angle-double-right"></i></button>
                     </a>
                 </div>
             </div>
@@ -102,9 +94,9 @@
                     <button type="submit">Subscribe</button>
                 </form>
                 <div id="social-icons">
-                    <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <<a href="https://www.facebook.com/" aria-label="facebook account"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" aria-label="Instagram account"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/twitter" aria-label="Twitter account"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
             <div class="footer-nav">
