--- a/posts.html
+++ b/posts.html
@@ -12,17 +12,6 @@
     <link href="css/posts.css" rel="stylesheet">
     <!-- icons source -->
     <script src="https://kit.fontawesome.com/39e20b04f8.js"crossorigin="anonymous"></script>
-    <!-- Hotjar Tracking Code for https://thebean.netlify.app/ -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:2401616,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
     <title>The Bean | Blog-posts</title> 
 </head>
 <body>
@@ -72,7 +61,7 @@
             </div>
         </div>
         <div id="more-posts-button">
-            <button id="more-button" class="cta" type="button">More posts</button>
+            <button id="more-button" class="cta" type="button">More posts<i class="fas fa-angle-double-right"></i></button>
         </div>   
     </main>
     <footer>
@@ -87,9 +76,9 @@
                     <button type="submit">Subscribe</button>
                 </form>
                 <div id="social-icons">
-                    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/" aria-label="facebook account"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" aria-label="Instagram account"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/twitter" aria-label="Twitter account"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
             <div class="footer-nav">
