--- a/specific-post.html
+++ b/specific-post.html
@@ -76,9 +76,9 @@
                     <button type="submit">Subscribe</button>
                 </form>
                 <div id="social-icons">
-                    <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/" aria-label="facebook account"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" aria-label="Instagram account"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/twitter" aria-label="Twitter account"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
             <div class="footer-nav">
