Last fix (mostly css)
- Changed some css/responsiveness things. Text, content widht etc. on some of the pages.
- adjusted css on image-modal(responsiveness)
- made som changes to the "to-top" button to make it better to use/see

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content ="A pure coffee-blog. With lots of coffee knowledge, guides and answers to all your coffee questions">
+    <meta name="author" content="Endre Makra-Stenkløv">
+    <meta name="description" content ="A pure coffee-blog containing lots of coffee knowledge, guides and answers to all your coffee questions">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Tangerine:wght@400;700&display=swap" rel="stylesheet"> 
@@ -12,17 +13,6 @@
     <link href="css/contact.css" rel="stylesheet">
     <!-- icons source -->
     <script src="https://kit.fontawesome.com/39e20b04f8.js"crossorigin="anonymous"></script>
-    <!-- Hotjar Tracking Code for https://thebean.netlify.app/ -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:2401616,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
     <title>The Bean | Contact</title> 
 </head>
 <body>
@@ -52,7 +42,7 @@
             </nav>
             <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://twitter.com/twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/" aria-label="Youtube account"><i class="fab fa-youtube"></i></a>
         </div>
     </header>
     <main>
@@ -61,16 +51,16 @@
             <form id="contact-form" action="submit.php" method="POST">
                 <label for="name">Name:</label>
                 <input class="contact-form-input" type="text" name="name" id="name">
-                <div class="form-error" id="name-error">Please enter your name (minimum 5 characters</div>
+                <div class="form-error" id="name-error">Please enter your name (minimum 6 characters)</div>
                 <label for="email">Email:</label>
                 <input class="contact-form-input" type="email" name="email" id="email">
                 <div class="form-error" id="email-error">Please enter a valid email address</div>
                 <label for="subject">Subject:</label>
                 <input class="contact-form-input" type="text" name="subject" id="subject">
-                <div class="form-error" id="subject-error">Subject required (minimum 15 characters)</div>
+                <div class="form-error" id="subject-error">Subject required (minimum 16 characters)</div>
                 <label for="message">Message:</label>
                 <textarea name="message" id="message"></textarea>
-                <div class="form-error" id="message-error">Message required (minimum 25 characters)</div>
+                <div class="form-error" id="message-error">Message required (minimum 26 characters)</div>
                 <button class="cta" type="submit">Send message</button>
             </form>
         </fieldset>
@@ -89,7 +79,7 @@
                 <div id="social-icons">
                     <a href="https://www.facebook.com/" aria-label="facebook account"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.instagram.com/" aria-label="Instagram account"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/twitter" aria-label="Twitter account"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.youtube.com/" aria-label="Youtube account"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-nav">
