--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content ="A pure coffee-blog. With lots of coffee knowledge, guides and answers to all your coffee questions">
+    <meta name="author" content="Endre Makra-Stenkløv">
+    <meta name="description" content ="A pure coffee-blog containing lots of coffee knowledge, guides and answers to all your coffee questions">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">   
@@ -12,17 +13,6 @@
     <link href="css/about.css" rel="stylesheet">
     <!-- icons source -->
     <script src="https://kit.fontawesome.com/39e20b04f8.js"crossorigin="anonymous"></script>
-    <!-- Hotjar Tracking Code for https://thebean.netlify.app/ -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:2401616,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
     <title>The Bean | About</title> 
 </head>
 <body>
@@ -52,12 +42,15 @@
             </nav>
             <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://twitter.com/twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/" aria-label="Youtube account"><i class="fab fa-youtube"></i></a>
         </div>
     </header>
     <main>
-        <button aria-label="to top of page button" id="to-top-btn">Top</button>
-        <div class="content-width">
+        <button aria-label="to top of page button" id="to-top-btn">
+            <i class="fas fa-angle-up"></i>
+            <p>Top</p>
+        </button>
+        <div class="section-1">
             <h1>About the Blog</h1>
             <blockquote>
                 <p>"I believe humans get a lot done, not because we’re smart, but because we have 
@@ -90,7 +83,7 @@
         </div>
         <section>
             <img id="cappuccino-image" src="images/cappuccino.jpg" alt="Two green cappuccino cups with beautiful latte art pattern, standing on a dark wooden table">
-            <div class="content-width">
+            <div>
                 <h2>The Blogging</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
@@ -126,7 +119,7 @@
                 <div id="social-icons">
                     <a href="https://www.facebook.com/" aria-label="facebook account"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.instagram.com/" aria-label="Instagram account"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/twitter" aria-label="Twitter account"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.youtube.com/" aria-label="Youtube account"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-nav">
