--- a/posts.html
+++ b/posts.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content ="A pure coffee-blog. With lots of coffee knowledge, guides and answers to all your coffee questions">
+    <meta name="author" content="Endre Makra-Stenkløv">
+    <meta name="description" content ="A pure coffee-blog containing lots of coffee knowledge, guides and answers to all your coffee questions">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">     
@@ -41,11 +42,14 @@
             </nav>
             <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://twitter.com/twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/" aria-label="Youtube account"><i class="fab fa-youtube"></i></a>
         </div>
     </header>
     <main>
-        <button aria-label="to top of page button" id="to-top-btn">Top</button>
+        <button aria-label="to top of page button" id="to-top-btn">
+            <i class="fas fa-angle-up"></i>
+            <p>Top</p>
+        </button>
         <div class="top-text-width">
             <h1>All my coffee posts</h1>
             <h2>Full of caffein</h2>
@@ -61,7 +65,7 @@
             </div>
         </div>
         <div id="more-posts-button">
-            <button id="more-button" class="cta" type="button">More posts<i class="fas fa-angle-double-right"></i></button>
+            <button id="more-button" class="cta" type="button">More posts<i class="fas fa-angle-double-down"></i></button>
         </div>   
     </main>
     <footer>
@@ -78,7 +82,7 @@
                 <div id="social-icons">
                     <a href="https://www.facebook.com/" aria-label="facebook account"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.instagram.com/" aria-label="Instagram account"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/twitter" aria-label="Twitter account"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.youtube.com/" aria-label="Youtube account"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-nav">
