--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </button>
             <h1>Learn the secrets of Coffee</h1>
             <h2>Learn, make & drink</h2>
+            <p>TESTTESTTEST!!!!</p>
             <div id="index-cta-padding">
                 <a href="posts.html" type="button">
                     <div class="index-cta">
