--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
                 <i class="fas fa-angle-up"></i>
                 <p>Top</p>
             </button>
-            <h1>Learn the secrets of Coffee</h1>
+            <h1>Learn the secrets of Coffee TEST</h1>
             <h2>Learn, make & drink</h2>
-            <p>TESTTESTTEST!!!!</p>
             <div id="index-cta-padding">
                 <a href="posts.html" type="button">
                     <div class="index-cta">
