--- a/specific-post.html
+++ b/specific-post.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Endre Makra-Stenkløv">
-    <meta name="description" content ="A pure coffee-blog containing lots of coffee knowledge, guides and answers to all your coffee questions">
+    <meta name="description" content ="Specific chosen blog-post at 'The Bean' coffee blog">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">     
