index cta and carousel

--- a/index.html
+++ b/index.html
@@ -71,20 +71,22 @@
                         <i class="fas fa-chevron-circle-right"></i>
                     </button>
                 </div>
-                <div id="posts-carousel">
-                    <div class="loader">
-                        <i class="fas fa-mug-hot"></i>
+                <section id="carousel-container">
+                    <div id="posts-carousel">
+                        <div class="loader">
+                            <i class="fas fa-mug-hot"></i>
+                        </div>
                     </div>
-                </div>
-                <div id="dot-indicator-container">
+                </section>
+                <!-- <div id="dot-indicator-container">
                     <div class="dot-indicator-one"></div>
                     <div class="dot-indicator-two"></div>
-                </div>
-                <div class="center-align">
-                    <a href="posts.html">
-                        <button class="cta" type="button">All posts<i class="fas fa-angle-double-right"></i></button>
-                    </a>
-                </div>
+                </div> -->
+                <a href="posts.html">
+                    <div class="cta center-align">
+                    All posts<i class="fas fa-angle-double-right"></i>
+                    </div>
+                </a>
             </div>
         </main>
     <footer>
