Index and posts.html

--- a/about.html
+++ b/about.html
@@ -47,8 +47,7 @@
     </header>
     <main>
         <button aria-label="to top of page button" id="to-top-btn">
-            <i class="fas fa-angle-up"></i>
-            <p>Top</p>
+            <i class="fas fa-angle-up"></i>Top
         </button>
         <div class="section-1">
             <h1>About the Blog</h1>
