--- a/contact.html
+++ b/contact.html
@@ -72,8 +72,8 @@
                     Get notified of new posts!
                 </h2>
                 <form action="submit.php" method="POST">
-                    <label for="email">Your email:</label>
-                    <input type="email" id="email"/>
+                    <label for="subscribe-email">Your email:</label>
+                    <input type="email" id="subscribe-email"/>
                     <button type="submit">Subscribe</button>
                 </form>
                 <div id="social-icons">
