--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                         <div class="bar2"></div>
                         <div class="bar3"></div>
                     </div>
-                </label>
+                </label>    
                 <input type="checkbox" id="hamburger-menu" role="navigation">
                 <nav>
                     <ul>
-                        <li><a  href="index.html" class="active">Home</a></li>
-                        <li><a  href="posts.html">Posts</a></li>
-                        <li><a  href="about.html">About</a></li>
-                        <li><a  href="contact.html">Contact</a></li>
+                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="posts.html">Posts</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
@@ -49,7 +49,7 @@
         <main>
             <button aria-label="to top of page button" id="to-top-btn">
                 <i class="fas fa-angle-up"></i>
-                <p>Top</p>
+                Top
             </button>
             <h1>Learn the secrets of Coffee</h1>
             <h2>Learn, make & drink</h2>
@@ -78,10 +78,10 @@
                         </div>
                     </div>
                 </section>
-                <!-- <div id="dot-indicator-container">
+                <div id="dot-indicator-container">
                     <div class="dot-indicator-one"></div>
                     <div class="dot-indicator-two"></div>
-                </div> -->
+                </div>
                 <a href="posts.html">
                     <div class="cta center-align">
                     All posts<i class="fas fa-angle-double-right"></i>
