--- a/posts.html
+++ b/posts.html
@@ -47,8 +47,7 @@
     </header>
     <main>
         <button aria-label="to top of page button" id="to-top-btn">
-            <i class="fas fa-angle-up"></i>
-            <p>Top</p>
+            <i class="fas fa-angle-up"></i>Top
         </button>
         <div class="top-text-width">
             <h1>All my coffee posts</h1>
