--- a/specific-post.html
+++ b/specific-post.html
@@ -47,8 +47,7 @@
     </header>
     <main>
         <button aria-label="to top of page button" id="to-top-btn">
-            <i class="fas fa-angle-up"></i>
-            <p>Top</p>
+            <i class="fas fa-angle-up"></i>Top
         </button>
         <div id="modal-container"></div>
         <a id="back-link" href="posts.html"><i class="fas fa-angle-left"></i>back to posts</a>
@@ -57,6 +56,7 @@
                 <i class="fas fa-mug-hot"></i>
             </div>
         </div>
+        <p>Enjoy!</p>
         <a id="back-link" href="posts.html"><i class="fas fa-angle-left"></i>back to posts</a>
     </main>
     <footer>
