--- a/specific-post.html
+++ b/specific-post.html
@@ -56,7 +56,7 @@
                 <i class="fas fa-mug-hot"></i>
             </div>
         </div>
-        <p>Enjoy!</p>
+        <p id="enjoy-paragraph">Enjoy!</p>
         <a id="back-link" href="posts.html"><i class="fas fa-angle-left"></i>back to posts</a>
     </main>
     <footer>
